// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should return connection from mongo cursor 1`] = `
{
  "count": 4,
  "edges": [
    {
      "cursor": "bW9uZ286MA==",
      "node": "user",
    },
    {
      "cursor": "bW9uZ286MQ==",
      "node": "user",
    },
  ],
  "endCursorOffset": 2,
  "pageInfo": {
    "endCursor": "bW9uZ286MQ==",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "bW9uZ286MA==",
  },
  "startCursorOffset": 0,
}
`;

exports[`should return connection from mongo cursor 2`] = `
{
  "count": 4,
  "edges": [
    {
      "cursor": "bW9uZ286Mg==",
      "node": "user",
    },
    {
      "cursor": "bW9uZ286Mw==",
      "node": "user",
    },
  ],
  "endCursorOffset": 4,
  "pageInfo": {
    "endCursor": "bW9uZ286Mw==",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "bW9uZ286Mg==",
  },
  "startCursorOffset": 2,
}
`;

exports[`should return connection from mongo cursor using lean equals false 1`] = `
{
  "count": 4,
  "edges": [
    {
      "cursor": "bW9uZ286MA==",
      "node": "user",
    },
    {
      "cursor": "bW9uZ286MQ==",
      "node": "user",
    },
  ],
  "endCursorOffset": 2,
  "pageInfo": {
    "endCursor": "bW9uZ286MQ==",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "bW9uZ286MA==",
  },
  "startCursorOffset": 0,
}
`;

exports[`should return connection from mongo cursor using lean equals false 2`] = `
{
  "count": 4,
  "edges": [
    {
      "cursor": "bW9uZ286Mg==",
      "node": "user",
    },
    {
      "cursor": "bW9uZ286Mw==",
      "node": "user",
    },
  ],
  "endCursorOffset": 4,
  "pageInfo": {
    "endCursor": "bW9uZ286Mw==",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "bW9uZ286Mg==",
  },
  "startCursorOffset": 2,
}
`;

exports[`should return connection from mongo cursor using raw 1`] = `
{
  "count": 4,
  "edges": [
    {
      "cursor": "bW9uZ286MA==",
      "node": "user",
    },
    {
      "cursor": "bW9uZ286MQ==",
      "node": "user",
    },
  ],
  "endCursorOffset": 2,
  "pageInfo": {
    "endCursor": "bW9uZ286MQ==",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "bW9uZ286MA==",
  },
  "startCursorOffset": 0,
}
`;

exports[`should return connection from mongo cursor with useEstimatedCount 1`] = `
{
  "count": 4,
  "edges": [
    {
      "cursor": "bW9uZ286MA==",
      "node": "user",
    },
    {
      "cursor": "bW9uZ286MQ==",
      "node": "user",
    },
  ],
  "endCursorOffset": 2,
  "pageInfo": {
    "endCursor": "bW9uZ286MQ==",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "bW9uZ286MA==",
  },
  "startCursorOffset": 0,
}
`;

exports[`should return connection from mongo cursor with useEstimatedCount 2`] = `
{
  "count": 4,
  "edges": [
    {
      "cursor": "bW9uZ286Mg==",
      "node": "user",
    },
    {
      "cursor": "bW9uZ286Mw==",
      "node": "user",
    },
  ],
  "endCursorOffset": 4,
  "pageInfo": {
    "endCursor": "bW9uZ286Mw==",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "bW9uZ286Mg==",
  },
  "startCursorOffset": 2,
}
`;

exports[`should work with empty args 1`] = `
{
  "count": 4,
  "edges": [
    {
      "cursor": "bW9uZ286MA==",
      "node": "user",
    },
    {
      "cursor": "bW9uZ286MQ==",
      "node": "user",
    },
    {
      "cursor": "bW9uZ286Mg==",
      "node": "user",
    },
    {
      "cursor": "bW9uZ286Mw==",
      "node": "user",
    },
  ],
  "endCursorOffset": 4,
  "pageInfo": {
    "endCursor": "bW9uZ286Mw==",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "bW9uZ286MA==",
  },
  "startCursorOffset": 0,
}
`;

exports[`should work with empty args and empty result 1`] = `
{
  "count": 0,
  "edges": [],
  "endCursorOffset": 0,
  "pageInfo": {
    "endCursor": null,
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": null,
  },
  "startCursorOffset": 0,
}
`;
